# One-Parameter-Hydrologic-Model

./: .gitignore  README.md  build_windows_plugin.sh  config.py  imerg_gee.py  install_plugin.sh  kinematic_wave_router.py  lulc_lookup.csv  precip_input.py  precip_input_gpu.py  process_dem.py  pyproject.toml  requirements.txt  routing_utils.py  runoff_input.py  runoff_input_gpu.py  serves_gee.py  setup_qgis_linux.sh  test_ee_auth.sh  vsa_opm.py
.github/workflows/: deploy-study.yml
_plugin_build/vsa_opm/: config.py  kinematic_wave_router.py  precip_input_gpu.py  process_dem.py  routing_utils.py  routing_utils_gpu.py  runoff_input.py  serves_gee.py
_plugin_build/vsa_opm_plugin/: __init__.py  metadata.txt  opm_plugin.py
configs/: example_config.yaml
qgis_plugin/: README.md
qgis_plugin/bridge/: __init__.py  config_bridge.py  dependencies.py  runner.py
qgis_plugin/processing/: provider.py
qgis_plugin/tests/: test_config_bridge.py  test_runner.py
qgis_plugin/ui/: main_dialog.py  tab_dem.py  (+3 more)
study/: .gitignore  claude.md  mdx-components.tsx  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
tests/: 01_test_watershed_generation.py  02_test_routing_animation.py  03_test_vsa_opm.py  04_test_vsa_animation.py  05_test_spatial_maps.py  06_test_at_sensitivity.py  07_test_at_faccum_analysis.py  _opm_diag.py  test_random.py
tools/: generate_presentation_figures.py  gssha_to_opm.py  plot_channel_mask.py  plot_combinations.py  run_all_floods copy.py  run_all_floods.py  run_combinations.py  runner.py  sensitivity.py  sensitivity_report.py
(+111 files in other folders)
